syntax = "proto3";

package aggregatorUser;

// "directory/;package_name"
option go_package = "/;aggregatorUser";

service AggregatorUserService {
  rpc GetById (GetByIdRequest) returns (User);
  rpc GetByUsername (GetByUsernameRequest) returns (User);
  rpc GetAll (GetAllRequest) returns (Users);
  rpc Find (FindRequest) returns (Users);
}

message GetByIdRequest {
  string user_id = 1;
}

message GetByUsernameRequest {
  string username = 1;
}


message GetAllRequest {
  RequestPagination pagination = 1;
}

message FindRequest {
  string email = 1;
  string login = 2;
  string phone = 3;
  string status = 4;
  RequestPagination pagination = 7;
}

message RequestPagination {
  uint32 page = 1;
  int32 limit = 2;
  uint32 offset = 3;
}

// Responses
message UUID {
  string value = 1;
}

message Empty {
}

message Exist {
  bool exist = 1;
}

message Role {
  string id = 1;
  string name = 2;
  string scopes = 3;
}
message User {
  string id = 1;
  string phone = 2;
  string email = 3;
  string login = 4;
  string password_hash = 5;
  string status = 6;
}

message Users {
  uint32 pages_count = 1;
  uint32 total_items = 2;
  uint32 per_page = 3;
  repeated User users = 4;
}